--- a/proyecto/estilos.css
+++ b/proyecto/estilos.css
@@ -1,11 +1,131 @@
 
+/*side bar cerrada */
+.side-bar.close{
+    width: 70px;
+}
+.side-bar.close header .text-bar{
+}
+.side-bar.close li .text-bar{
+
+}
+
+
+
+/* side bar abierta */
+.side-bar{
+    position:fixed;
+    width: 170px;
+    height: 100%;
+    padding: 10px 10px;
+    transition: 5s;
+    background-color: #ECC589;
+}
+
+
+.side-bar header{
+    font-size: 30px;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    width: 60px;
+}
+
+.side-bar header{
+    padding: 0px;
+    height: 50px;
+    width: 60px;
+}
+
+.side-bar header a{
+    text-decoration: none;
+    font-size: 26px;
+    line-height: 50px;
+    display: flex;
+    align-items: center;
+    padding: 10px;
+    width: 100%;
+    margin-left: 5px;
+    color: #B1701B; 
+}
+.side-bar a #icon-menu{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    font-size: 26px;
+}
+
+.side-bar header .text-bar{
+    display: flex;
+    align-items: center;
+    padding-left: 10px;
+    margin-left: 10px;
+    transition: 5s;
+}
+
+.side-bar li .icon{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    font-size: 20px;
+}
+.side-bar li .text-bar{
+    display:flex;
+    justify-content: left;
+    align-items: center;
+    padding-left: 10px;
+    margin-left: 10px;
+    transition: 5s;
+    height: 100px;
+    min-width: 100px;
+}
+.side-bar.open.text-bar{
+    opacity: 0%;
+} 
+.side-bar ul{
+    list-style-type:none;
+    text-align: center;
+    padding: 5px;
+    margin: 0px;
+}
+.side-bar ul li{
+    margin-top: 40px;
+    padding: 0px;
+    height: 60px;
+    text-align: center;
+}
+.side-bar ul li:hover{
+    border-left: 3px solid #B1701B;
+    background: #E5BF86;    
+}
+.side-bar li a{
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 30px;
+    display: flex;
+    align-items: center;
+    padding: 5px;
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
+    color: #B1701B;         
+}
+
+body{
+    margin-left: 170px;
+}
+/* encabezado */
 #encabezado {
     text-align: center;
     background-color:beige;
-    height: 100vh; 
+    margin-left: 70px;
+    height: 100vh;
     display: flex;
     flex-direction:column;
-    justify-content: center;   
+    justify-content: center;
 }
  
 #encabezado h1{
@@ -19,31 +139,10 @@
     font-family: 'Inconsolata', monospace;
 }
 
-nav ul{
-    background-color: burlywood;
-    margin-top: 80px;
-    list-style-type:none;
-    text-align: center;
-    padding: 10px;
-    border: 1px solid peru;
-}
-nav li{
-    
-    display:inline-block;
-    justify-content: center;       
-}
-
-nav li a{
-    padding: 10px;
-    margin-left: 30px;
-    margin-right: 30px;
-    color:peru;  
-       
-}
-
-#contenido{
-    padding-left: 10px;
-    padding-right: 10px;
+/*contenido */
+body #contenido{
+    background-color: #f9f9f9;
+    margin: 0px 0px 0px 70px;
 }
 
 #contenido h2 {
@@ -59,7 +158,7 @@ nav li a{
 }
 img{
     border-radius: 50%;  
-    border: 5px solid burlywood;
+    border: 5px solid #E5BF86;
 }
 
 #datos-lista-izq ul li{
@@ -99,9 +198,12 @@ img{
     padding: 10px;
     background-color: beige;
     border-radius: 10px;
-    border: 2px solid burlywood;
+    border: 2px solid #E5BF86;
 }
 
+#experiencia h6{
+    font-size: 20px;
+}
 
 #estudios h4{
     font-size: 26px;
@@ -134,17 +236,24 @@ form input, textarea{
 #boton{
     margin: 100px;
     margin-top: 30px;
+    border-radius: 5px;
 } 
 button{
-    border: 1px solid burlywood;
+    border: 1px solid #E5BF86;
     border-radius: 5px;
     width: 40%;
-    background-color: bisque;
+    background-color: #E5BF86;
 }
 
 footer{
-    background-color: beige;
     text-align: center;
-    padding-top: 15px;
-    margin: 60px 40px 20px 40px;
+    padding: 0px;
+    margin: 20px 0px 0px 0px;
 }
+footer h6{
+    margin: 60px 0px 0px 0px;
+    padding: 5px 0px 5px 0px;
+    background-color:  beige;
+
+}
+
